# tcpip

./: ReadMe.md
linux/: CMakeLists.txt  client.c  client_echo2.c  echo_EPETserv.c  echo_epollserv.c  echo_mpclient.c  echo_mpserv.c  echo_selectserv.c  echo_server.c  echo_stdclient.c  echo_stdserver.c  echo_storeserv.c  epoll_echo_server_et.c  epoll_echo_server_lt.c  flags_oob_recv.c  flags_oob_send.c  flags_peek_recv.c  flags_peek_send.c  fork.c  get_buf.c  pipe1.c  pipe2.c  pipe3.c  readv.c  remove_zombie.c  select.c  select_echo_server.c  sep_client.c  sep_serv2.c  set_buf.c  sigaction.c  signal.c  udp_client.c  udp_server.c  wait.c  waitpid.c  writev.c  zombie.c
linux/thread/: chat_client.c  chat_server.c  pthread_echo_serv.c  pthread_test1.c  semaphore.c  thread4.c  web_server.c  web_server的AI审批.md
linux/thread/ws_res/: tcp_ip.html  web_server.c
windows/: CMakeLists.txt  client.c  client_echo2_win.c  echo_selectserv_win.c  oob_recv_win.c  oob_send_win.c  server.c  setsocketopt.c
windows/thread/: AsyncNotifyEchoServ_win.c  IOCPEchoServ_win.c  OverlappedEchoServ_APC_win.c  OverlappedEchoServ_win.c  SyncCS_win.c  SyncEvent_win.c  SyncMutex_win.c  SyncSema_win.c  chat_client_win.c  chat_serv_win.c  thread1_win.c  thread2_win.c  thread3_win.c  web_server.c
windows/thread/ws_res/: index.html
